--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,9 +10,10 @@
     "test:run": "vitest run"
   },
   "devDependencies": {
-    "@vitest/ui": "latest",
-    "vite": "latest",
-    "vitest": "latest"
+    "@nestjs/testing": "^10.3.3",
+    "@vitest/coverage-v8": "^1.3.1",
+    "unplugin-swc": "^1.4.4",
+    "vitest": "1.3.1"
   },
   "stackblitz": {
     "startCommand": "npm run test:ui"
